--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <h2>📫 Contact</h2>
   <p>Email: <a href="mailto:your.email@gmail.com">your.email@gmail.com</a> |
-     LinkedIn: <a href="https://linkedin.com/in/yourlinkedin">linkedin.com/in/yourlinkedin</a> |
+     LinkedIn: <a href="https://linkedin.com/in/kostanca-kovaci">linkedin.com/in/kostanca-kovaci</a> |
      GitHub: <a href="https://github.com/kovacikostanca">github.com/kovacikostanca</a></p>
 </body>
 </html>
