--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									<a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Student_Performance_using_RandomForest" class="image fit"><img src="images/student_exam_performance.jpg" alt="" /></a>
 									<p>This project predicts whether a student will pass or fail based on demographic, behavioral, and academic features using the Student Performance Dataset. The workflow includes data preprocessing, feature engineering, model training, evaluation, and interpretability, giving insights not only on which students are at risk but also why they are predicted to pass or fail.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Student_Performance_using_RandomForest" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -108,7 +108,7 @@
 									<a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Sales%20Insights%20Dashboard" class="image fit"><img src="images/Sales Insights Dashboard.png" alt="" /></a>
 									<p>This project predicts whether a student will pass or fail based on demographic, behavioral, and academic features using the Student Performance Dataset. The workflow includes data preprocessing, feature engineering, model training, evaluation, and interpretability, giving insights not only on which students are at risk but also why they are predicted to pass or fail.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Sales%20Insights%20Dashboard" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
