--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Kostanca Kovaci<br />
 						Portfolio</h1>
-						<p>Data Scientist | Physicist | Python, SQL, Tableau, and Machine Learning <a href="https://github.com/kovacikostanca">GitHub</a>.</p>
+						<p>Data Scientist | Physicist | Python, SQL, Excel, Tableau, and Machine Learning <a href="https://github.com/kovacikostanca">GitHub</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -36,7 +36,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							
+							<li><a href="blog.html">Blog</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/kostanca-kovaci/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -66,13 +66,36 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">EDA Analysis<br />
+										<h2><a href="#">Netflix Content EDA<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Netflix-EDA.png" alt="" /></a>
 									<p>This project performs Exploratory Data Analysis (EDA) on the Netflix Show Dataset. The goal is to analyze trends in Netflix content by country, year, genre, and type (Movies vs TV Shows).</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Netflix-Show-EDA" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Excel Healthcare Analysis Dashboard<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Healthcare_Data_Analysis_Dashboard.png" alt="" /></a>
+									<p> This project focuses on analyzing healthcare clinical and operational data using Microsoft Excel.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/blob/main/Excel%20-%20Patient%20Records%20Dashboard/README.md" class="button">View Project</a></li>
+									</ul>
+								</article>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Data Cleaning on Airbnb Data<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Airbnb_image.jpg" alt="" /></a>
+									<p> The primary objective of this project is to clean, preprocess, and integrate Airbnb listings and reviews datasets from Inside Airbnb to enable meaningful analysis.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/blob/main/Airbnb%20Data%20Cleaning/README.md" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -94,7 +117,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Student_Performance_using_RandomForest" class="image fit"><img src="images/student_exam_performance.jpg" alt="" /></a>
-									<p>This project predicts whether a student will pass or fail based on demographic, behavioral, and academic features using the Student Performance Dataset. The workflow includes data preprocessing, feature engineering, model training, evaluation, and interpretability, giving insights not only on which students are at risk but also why they are predicted to pass or fail.</p>
+									<p>This project predicts whether a student will pass or fail based on demographic, behavioral, and academic features using the Student Performance Dataset.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Student_Performance_using_RandomForest" class="button">View Project</a></li>
 									</ul>
@@ -106,7 +129,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Sales%20Insights%20Dashboard" class="image fit"><img src="images/Sales Insights Dashboard.png" alt="" /></a>
-									<p>This project predicts whether a student will pass or fail based on demographic, behavioral, and academic features using the Student Performance Dataset. The workflow includes data preprocessing, feature engineering, model training, evaluation, and interpretability, giving insights not only on which students are at risk but also why they are predicted to pass or fail.</p>
+									<p>This project illustrates an interactive Tableau Dashboard that provides data-driven insights into sales performance and business growth, highlights data analysis, design interactive dashboards, and key business metrics.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Sales%20Insights%20Dashboard" class="button">View Project</a></li>
 									</ul>
