--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Sales Insights Dashboard<br />
+										<h2><a href="#">Tableau Sales Insights Dashboard<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Sales%20Insights%20Dashboard" class="image fit"><img src="images/Sales Insights Dashboard.png" alt="" /></a>
@@ -180,4 +180,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
