--- a/blog.html
+++ b/blog.html
@@ -5,15 +5,19 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+
+		<link rel="stylesheet" href="assets/css/custom.css" />
+
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
-		<div id="wrapper">
+		<div id="wrapper" class="fade-in">
 
 			<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo">Portfolio</a>
+				<a href="index.html" class="logo">Blog</a>
 			</header>
 
 			<!-- Nav -->
@@ -21,18 +25,19 @@
 				<ul class="links">
 					<li><a href="index.html">Projects</a></li>
 					<li class="active"><a href="blog.html">Blog</a></li>
+					<li><a href="generic.html">Case Study</a></li>
 				</ul>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/kostanca-kovaci/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 					<li><a href="https://github.com/kovacikostanca" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-				</ul>
+			    </ul>
 			</nav>
 
 			<!-- Main -->
 			<div id="main">
 
 				<header class="major">
-					<h1>My Blog</h1>
+					<h1>Academic Projects</h1>
 					<p>Thoughts, insights & data explorations</p>
 				</header>
 
@@ -41,7 +46,7 @@
 					<!-- Blog Post Preview Example -->
 					<article>
 						<header>
-							<h2><a href="#">How I Built My House Price Prediction Model</a></h2>
+							<h2><a href="#">Retail Sales Performance Dashboard - Europe | Tableau</a></h2>
 						</header>
 						<p>A walkthrough of my modeling approach, feature engineering, and evaluation steps.</p>
 						<ul class="actions special">
