--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="generic.html">Case Study</a></li>
+							<li><a href="about_me.html">About Me</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/kostanca-kovaci/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -51,18 +52,6 @@
 
 				<!-- Main -->
 				<div id="main">
-
-						<!-- Intro about you -->
-    					<section id="about-me" class="intro-section">
-        					<h2>About Me</h2>
-        					<p>
-								Hi! I am a <strong>Junior Data Scientist and Physicist</strong> passionate about turning complex data into actionable insights. 
-								Skilled in <strong>Python, SQL, Excel, Tableau, and Machine Learning</strong>. I enjoy solving real-world problems, building 
-								interactive dashboards and making data-driven decisions.
-							</br>
-								Explore my projects and see how I combine analytics and modeling with creativity to uncover meaningful patterns.
-							</p>
-   						 </section>
 
 						<!-- Featured Post -->
 								<article class="post featured" style="font-size: 0.5rem;">
