--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,7 @@
 					<li><a href="index.html">Projects</a></li>
 					<li class="active"><a href="blog.html">Blog</a></li>
 					<li><a href="generic.html">Case Study</a></li>
+					<li><a href="about_me.html">About Me</a></li>
 				</ul>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/kostanca-kovaci/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
