--- a/about_me.html
+++ b/about_me.html
@@ -36,7 +36,7 @@
 
             <!-- About Me Section -->
             <section id="about-me" class="intro-section">
-                <img src="#" alt="Kostanca Kovaci" class="about-img">
+                
                 <h2>About Me</h2>
                 <p>
                     I am a Junior Data Scientist and Physicist passionate about turning complex data into actionable insights. 
@@ -46,17 +46,22 @@
 
                 <h3>Skills & Tools</h3>
                 <ul>
-                    <li>Python, SQL, Excel</li>
-                    <li>Tableau, Power BI</li>
+                    <li><strong> Python </strong>(Pandas, NumPy, Scikit-learn, NLTK), <strong>SQL</strong>, Excel, Jupyter Notebooks</li>
+                    <li>Tableau, Power BI, Seaborn, Matplotlib</li>
                     <li>Machine Learning & Data Analysis</li>
-                    <li>Data Cleaning, EDA, and Visualization</li>
+                    <li>Data Cleaning, EDA, Visualization, Data Cleaning/ Wrangling/ Preprocessing, Feature Engineering, </li>
                 </ul>
 
                 <h3>Experience & Education</h3>
-                <p>
-                    Physics background with strong analytical skills, combined with hands-on experience in data science projects, dashboards, and machine learning models.
+                 <p>
+                <li><strong>Master on Data Science</strong>, Middlesex University | London, UK (2042 - 2025)</li>
+                <li><strong>BSc in Physics</strong>, International Hellenic University| Kavala, Greece (2019 - 2023)</li>
                 </p>
-            </section>
+
+                <p>
+                    Physics background with strong analytical skills, combined with hands-on experience in personal and academic data science projects, dashboards, and machine learning models.
+                </p>
+                </section>
 
         </div>
 
