--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo">Blog</a>
+				<a href="index.html" class="logo">Portfolio</a>
 			</header>
 
 			<!-- Nav -->
