--- a/generic.html
+++ b/generic.html
@@ -23,7 +23,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Case Study</a>
+						<a href="index.html" class="logo">Portfolio</a>
 					</header>
 
 				<!-- Nav -->
