--- a/about_me.html
+++ b/about_me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>About Me - Kostanca Kovaci</title>
+    <title>About Me</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -77,3 +77,4 @@
 
 </body>
 </html>
+
