--- a/about_me.html
+++ b/about_me.html
@@ -21,7 +21,7 @@
         <nav id="nav">
             <ul class="links">
                 <li><a href="index.html">Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="blog.html">Academic Projects</a></li>
                 <li><a href="generic.html">Case Study</a></li>
                 <li class="active"><a href="about_me.html">About Me</a></li>
             </ul>
@@ -41,7 +41,7 @@
                 <p>
                     I am a Junior Data Scientist and Physicist passionate about turning complex data into actionable insights. 
                     Skilled in Python, SQL, Excel, Tableau, and Machine Learning, I enjoy solving real-world problems and building interactive dashboards. 
-                    Explore my projects to see how I combine analytics with creativity to uncover meaningful patterns.
+                </br>Explore my projects to see how I combine analytics with creativity to uncover meaningful patterns.
                 </p>
 
                 <h3>Skills & Tools</h3>
@@ -61,6 +61,12 @@
                 <p>
                     Physics background with strong analytical skills, combined with hands-on experience in personal and academic data science projects, dashboards, and machine learning models.
                 </p>
+
+                <!-- Links -->
+            <ul class="actions">
+                <li><a href="index.html" class="button">Back to Portfolio</a></li>
+                <li><a href="https://github.com/kovacikostanca" class="button alt">GitHub Portfolio</a></li>
+            </ul>
                 </section>
 
         </div>
@@ -77,4 +83,3 @@
 
 </body>
 </html>
-
