--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Projects</a></li>
-					<li class="active"><a href="blog.html">Blog</a></li>
+					<li class="active"><a href="blog.html">Academic Projects</a></li>
 					<li><a href="generic.html">Case Study</a></li>
 					<li><a href="about_me.html">About Me</a></li>
 				</ul>
@@ -39,7 +39,7 @@
 
 				<header class="major">
 					<h1>Academic Projects</h1>
-					<p>Thoughts, insights & data explorations</p>
+					<p>Modeling, Insights & Data Explorations</p>
 				</header>
 
 				<section class="posts">
@@ -101,4 +101,3 @@
 
 	</body>
 </html>
-
