--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="blog.html">Academic Projects</a></li>
 							<li><a href="generic.html">Case Study</a></li>
 							<li><a href="about_me.html">About Me</a></li>
 						</ul>
@@ -56,10 +56,10 @@
 						<!-- Featured Post -->
 								<article class="post featured" style="font-size: 0.5rem;">
 									<header class="major">
-										<h2 style="font-size: 2.5rem;"><a href="#">Who's Perspective does AI reflect?</a></h2>
+										<h2 style="font-size: 2.5rem;"><a>Who's Perspective does AI reflect?</a></h2>
 										<p style="font-size: 1.5rem;">Gendered Perceptions of Places in LLMs vs. Human Reviews</p>
 									</header>
-										<a href="#" class="image main">
+										<a href="generic.html" class="image main">
 											<img src="images/AI_risks.jpg" alt="" style="width: 60%; height: auto; display: block; margin: 0 auto;">
 										</a>
 										<ul class="actions special">
@@ -96,13 +96,25 @@
 								
 								<article>
 									<header>
-										<h2><a href="#">Data Cleaning on Airbnb Data<br />
+										<h2><a href="#">Data Cleaning on Airbnb Dataset<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Airbnb_image.jpg" alt="" /></a>
 									<p> The primary objective of this project is to clean, preprocess, and integrate Airbnb listings and reviews datasets from Inside Airbnb to enable meaningful analysis.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/blob/main/Airbnb%20Data%20Cleaning/README.md" class="button">GitHub Repository</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										<h2><a href="#">Data Cleaning Salary Survey Dataset<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/salary_survey.jpg" alt="" /></a>
+									<p> This project focuses on transforming a messy salary survey dataset into an analysis-ready format. The dataset includes information about job titles, company attributes, experience levels, gender, and salary details in various currencies.</p>
+									<ul class="actions special">
+										<li><a href="salarydataclean.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 
@@ -169,7 +181,7 @@
 								</article>
 
 								
-
+						<div></div>		
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
