--- a/tableau_retail_sales.html
+++ b/tableau_retail_sales.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Netflix Content EDA - Kostanca Kovaci</title>
+    <title>Tableau Retail Sales - Kostanca Kovaci</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     
@@ -24,7 +24,7 @@
     <nav id="nav">
         <ul class="links">
             <li><a href="index.html">Projects</a></li>
-            <li class="active"><a href="blog.html">Blog</a></li>
+            <li class="active"><a href="blog.html">Tableau Retail Sales</a></li>
         </ul>
         <ul class="icons">
             <li><a href="https://www.linkedin.com/in/kostanca-kovaci/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -139,22 +139,22 @@
                 <li><strong>Top Products</strong></br>
                      A bar chart showcasing the top 10 products by sales, allowing quick identification of best-sellers and most profitable items.</li>
                 </li>
-                <img src="images/Top_Products.png" alt="Tableau Preview">
+                <img src="images/Top_Products.png" alt="Tableau Preview" style="width:500px; height:300px;">
                 <li><strong>Profitability Analysis</strong></br>
                      A breakdown of profit margins across different product categories, highlighting which categories are most profitable.</li>
-                <img src="images/profitability.png" alt="Tableau Preview">
+                <img src="images/profitability.png" alt="Tableau Preview" style="width:500px; height:250px;">
                 <li><strong>Customer Segmentation</strong></br>
                      Analysis of sales and profit by customer segments (Consumer, Corporate, Home Office), helping to identify which segments contribute most to revenue.</li>
-                <img src="images/customer_segment.png" alt="Tableau Preview">
+                <img src="images/customer_segment.png" alt="Tableau Preview" style="width:300px; height:360px;">
                 <li><strong>Geographical Insights</strong></br>
                      A map visualization showing sales and profit distribution across different European countries, identifying revenue and profit by regions.</li>
                 <img src="images/region_trends.png" alt="Tableau Preview">
                 <li><strong>Top Customers</strong></br>
                      A list of the top 20 customers by sales and quantity, enabling targeted marketing and relationship management.</li>
-                <img src="images/top_customers.png" alt="Tableau Preview">
+                <img src="images/top_customers.png" alt="Tableau Preview" style="width:500px; height:300px;">
                 <li><strong>Negative Profit Products</strong></li>
                         A bar chart listing products with negative profit, allowing for quick identification of loss-making items for further analysis.</li>
-                <img src="images/loss_products.png" alt="Tableau Preview">
+                <img src="images/loss_products.png" alt="Tableau Preview" style="width:500px; height:300px;">
             </ol>
 
         
