--- a/data_cleaning.html
+++ b/data_cleaning.html
@@ -47,7 +47,9 @@
 						<header>
 							<h2><a href="#">Data Cleaning on Airbnb Dataset</a></h2>
 						</header>
-						<img src="images/Airbnb_image.jpg" alt="Airbnb Cleaning" style="width: 300px;; height: 250px;; margin-bottom:1rem;" />
+						<a class="image fit">
+						<img src="images/Airbnb_image.jpg" alt="Airbnb Cleaning" style="width: 300px; height: 250px; display: block; margin: 0 auto 1rem auto;"/>
+						</a>
 						<p>This project focuses on transforming a messy salary survey dataset into an analysis-ready format. 
 							The dataset includes information about job titles, company attributes, experience levels, gender, 
 							and salary details in various currencies.</p>
@@ -60,7 +62,9 @@
 						<header>
 							<h2><a href="#">Data Cleaning Salary Survey Dataset</a></h2>
 						</header>
-						<img src="images/salary_survey.jpg" alt="Salary Data Cleaning" style="width: 300px;; height: 250px;; margin-bottom:1rem;" />
+						<a class="image fit">
+						<img src="images/salary_survey.jpg" alt="Salary Data Cleaning" style="width: 300px; height: 250px; display: block; margin: 0 auto 1rem auto;"/>
+						</a>
 						<p>This project focuses on transforming a messy salary survey dataset into an analysis-ready format. The dataset includes information about job titles, company attributes, 
 							experience levels, gender, and salary details in various currencies.</p>
 						<ul class="actions special">
