--- a/about_me.html
+++ b/about_me.html
@@ -52,13 +52,11 @@
 
                 <h3>Experience & Education</h3>
                  <p>
-                <li><strong>Master on Data Science</strong>, Middlesex University | London, UK (2042 - 2025)</li>
-                <li><strong>BSc in Physics</strong>, International Hellenic University| Kavala, Greece (2019 - 2023)</li>
+                <li><strong>MSc in Data Science</strong><br/> Middlesex University | London, UK (2042 - 2025)</li>
+                <li><strong>BSc in Physics</strong><br/> International Hellenic University| Kavala, Greece (2019 - 2023)</li>
                 </p>
 
-                <p>
-                    Physics background with strong analytical skills, combined with hands-on experience in personal and academic data science projects, dashboards, and machine learning models.
-                </p>
+            
 
                 <!-- Links -->
             <ul class="actions">
