--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
+							<li><a href="tutorials.html">Tutorials</a></li>
 							<li><a href="about_me.html">About Me</a></li>
 						</ul>
 						<ul class="icons">
@@ -78,6 +79,18 @@
 						<!-- Posts -->
 
 							<section class="posts">
+								<article>
+									<header>
+										<h2><a>Customer Churn Prediction<br />
+										</a></h2>
+									</header>
+									<a  class="image fit"><img src="images/customer_churn.jpg" alt="" /></a>
+									<p>This project predicts customer churn and provide actionable recommendations to reduce attrition and improve retention.</p>
+									<ul class="actions special">
+										<li><a href="customer_churn.html" class="button">View Project</a></li>
+									</ul>
+								</article>
+
 								<article>
 									<header>
 										<h2><a href="#">Netflix Content EDA<br />
@@ -184,9 +197,10 @@
 									<a href="#" class="image fit"><img src="images/Retail_Sales_Tableau.png" alt="" /></a>
 									<p>This dashboard delivers an end-to-end view of sales and profitability performance for a European retail business. It includes executive KPIs, customer segmentation, product category profitability, geographic insights, and top-performing items.</p>
 									<ul class="actions special">
-										<li><a href="tableau_retail_sales.html" class="button">GitHub Repository</a></li>
+										<li><a href="tableau_retail_sales.html" class="button">View Project</a></li>
 									</ul>
 								</article>
+
 
 								
 						<div></div>		
