--- a/machine_learning.html
+++ b/machine_learning.html
@@ -43,12 +43,24 @@
 				<section class="posts">
 
 					<!-- Blog Post Preview Example -->
-					            <article>
+					         	<article>
 									<header>
-										<h2><a href="#">House Price Prediction<br />
+										<h2><a>Customer Churn Prediction<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/housingcosts.jpg" alt="" /></a>
+									<a  class="image fit"><img src="images/customer_churn.jpg" alt="" /></a>
+									<p>This project predicts customer churn and provide actionable recommendations to reduce attrition and improve retention.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Customer%20Churn%20Prediction" class="button">GitHub Repository</a></li>
+									</ul>
+								</article>   
+					
+								<article>
+									<header>
+										<h2><a>House Price Prediction<br />
+										</a></h2>
+									</header>
+									<a class="image fit"><img src="images/housingcosts.jpg" alt="" /></a>
 									<p>This project builds a machine learning pipeline to predict housing prices using socioeconomic and structural features, using linear and polynomial regression.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/blob/main/house-price-prediction/House_Price_Prediction.ipynb" class="button">GitHub Repository</a></li>
@@ -57,10 +69,10 @@
 
 								<article>
 									<header>
-										<h2><a href="#">Fake Post Job Detector<br />
+										<h2><a>Fake Post Job Detector<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/fakejob.png" alt="" /></a>
+									<a class="image fit"><img src="images/fakejob.png" alt="" /></a>
 									<p>A machine learning project that detects fraudulent job postings using natural language processing (NLP). The system helps job seekers and platforms identify fake or scam job posts in real time.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Fake_Job_Post_Detector" class="button">GitHub Repository</a></li>
@@ -69,10 +81,10 @@
 
 								<article>
 									<header>
-										<h2><a href="#">Student Exam Performance<br />
+										<h2><a>Student Exam Performance<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Student_Performance_using_RandomForest" class="image fit"><img src="images/student_exam_performance.jpg" alt="" /></a>
+									<a class="image fit"><img src="images/student_exam_performance.jpg" alt="" /></a>
 									<p>This project predicts whether a student will pass or fail based on demographic, behavioral, and academic features using the Student Performance Dataset.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Student_Performance_using_RandomForest" class="button">GitHub Repository</a></li>
