--- a/machine_learning.html
+++ b/machine_learning.html
@@ -51,6 +51,7 @@
 									<a  class="image fit"><img src="images/customer_churn.jpg" alt="" /></a>
 									<p>This project predicts customer churn and provide actionable recommendations to reduce attrition and improve retention.</p>
 									<ul class="actions special">
+										<li><a href="customer_churn.html" class="button">View Project</a></li>
 										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/Customer%20Churn%20Prediction" class="button">GitHub Repository</a></li>
 									</ul>
 								</article>   
