--- a/customer_churn.html
+++ b/customer_churn.html
@@ -167,6 +167,20 @@
             </table>
             </div>
             <br />
+
+            <p style="font-size: 1.1rem;"><strong>Confusion Matrix:</strong></p>
+            <div class="table-container">
+            <table>
+                <tr>
+                    <th>Actual \ Predicted</th>
+                    <th>No churn</th>
+                    <th>Churn</th>
+                </tr>
+                <tr><td>No churn</td><td>917</td><td>116</td></tr>
+                <tr><td>Churn</td><td>172</td><td>202</td></tr>
+            </table>
+            </div>
+            <br />
             <p class="note"><strong>Observation:</strong> Logistic Regression misses many churners (false negatives).</p>
 
             <p style="font-size: 1.1rem;"><strong>XGBoost (Recommended)</strong></p>
