--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 							<a href="data_cleaning.html" class="category-btn">Data Cleaning</a>
 							<a href="machine_learning.html" class="category-btn">Machine Learning</a>
 							<a href="dashboards.html" class="category-btn">Dashboards</a>
+							<a href="sql_projects.html" class="category-btn">SQL</a>
 						</div>
 
 
@@ -79,6 +80,19 @@
 						<!-- Posts -->
 
 							<section class="posts">
+								<article>
+									<header>
+										<h2><a>E-commerce SQL Analysis<br />
+										</a></h2>
+									</header>
+									<a  class="image fit"><img src="images/e_commerce_sql.jpg" alt="" /></a>
+									<p>This project simulates a complete E-Commerce Sales Database that tracks customers, products, orders, and order items.</p>
+									<ul class="actions special">
+										<li><a href="e_commerce_sql.html" class="button">View Project</a></li>
+										<li><a href="https://github.com/kovacikostanca/Data-Science-Portfolio/tree/main/E-Commerce%20Sales%20Analysis%20-%20PostgreSQL" class="button">GitHub Repository</a></li>
+									</ul>
+								</article>
+
 								<article>
 									<header>
 										<h2><a>Customer Churn Prediction<br />
