--- a/tutorials.html
+++ b/tutorials.html
@@ -113,7 +113,7 @@
 
             <!-- Table of Contents -->
             <div class="toc">
-            <a href="data_cleaning_tut.html" class="toc-card">
+            <a href="data_cleaning_tut.html" class="toc-card" style="background-image: url('images/pic10.jpg'); background-size: cover; background-position: center;">
                 <h3>Data Cleaning Tutorial</h3>
                 <p>Theory + Practical Examples</p>
              </a>   
