--- a/blog.html
+++ b/blog.html
@@ -1,103 +1,115 @@
 <!DOCTYPE HTML>
+<!--
+	Massively by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>Blog</title>
+		<title>Blogs - Kostanca Kovaci Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-
-		<link rel="stylesheet" href="assets/css/custom.css" />
-
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
-		<div id="wrapper" class="fade-in">
+		<!-- Wrapper -->
+			<div id="wrapper" class="fade-in">
 
-			<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="logo">Portfolio</a>
-			</header>
+				<!-- Header -->
+					<header id="header">
+						<a href="index.html" class="logo">Portfolio</a>
+					</header>
 
-			<!-- Nav -->
-			<nav id="nav">
-				<ul class="links">
-					<li><a href="index.html">Projects</a></li>
-					<li class="active"><a href="blog.html">Academic Projects</a></li>
-					<li><a href="generic.html">Case Study</a></li>
-					<li><a href="about_me.html">About Me</a></li>
-				</ul>
-				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/kostanca-kovaci/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-					<li><a href="https://github.com/kovacikostanca" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-			    </ul>
-			</nav>
-
-			<!-- Main -->
-			<div id="main">
-
-				<header class="major">
-					<h1>Academic Projects</h1>
-					<p>Modeling, Insights & Data Explorations</p>
-				</header>
-
-				<section class="posts">
-
-					<!-- Blog Post Preview Example -->
-					<article>
-						<header>
-							<h2><a href="#">Retail Sales Performance Dashboard - Europe | Tableau</a></h2>
-						</header>
-						<p>A walkthrough of my modeling approach, feature engineering, and evaluation steps.</p>
-						<ul class="actions special">
-							<li><a href="blog-post-1.html" class="button">Read More</a></li>
+				<!-- Nav -->
+					<nav id="nav">
+						<ul class="links">
+							<li><a href="index.html">Projects</a></li>
+							<li><a href="tutorials.html">Tutorials</a></li>
+							<li class="active"><a href="blog.html">Blogs</a></li>
+							<li><a href="about_me.html">About Me</a></li>
 						</ul>
-					</article>
-
-					<article>
-						<header>
-							<h2><a href="#">Analyzing Trends in Netflix Content</a></h2>
-						</header>
-						<p>What I discovered about movie genres, release trends, and global distribution.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button">Read More</a></li>
-						</ul>
-					</article>
-
-				</section>
-
-			</div>
-
-			<!-- Footer -->
-			<footer id="footer">
-				<section class="split contact">
-					<section class="alt">
-						<h3>Location</h3>
-						<p>London, UK | Larisa, Greece</p>
-					</section>
-					<section>
-						<h3>Email</h3>
-						<p><a href="#">kovacikostanca@gmail.com</a></p>
-					</section>
-					<section>
-						<h3>Social</h3>
-						<ul class="icons alt">
+						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/kostanca-kovaci/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 							<li><a href="https://github.com/kovacikostanca" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
-					</section>
-				</section>
-			</footer>
+					</nav>
 
-			<div id="copyright">
-				<ul><li>&copy; 2025</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+				<!-- Main -->
+					<div id="main">
+
+						<!-- Blog Intro -->
+						<div class="featured-projects-intro" style="text-align:center; margin-bottom:2rem;">
+							<h2 class="posts-header" style="font-size: 3.2rem; margin-bottom:1rem;">
+								Data Science Blog
+							</h2>
+
+							<p class="posts-intro" style="font-size:1.1rem; font-style: italic; text-align: center;">
+								"Insights, tutorials, and professional development content for data scientists.<br/>
+								Practical advice from real-world experience in analytics, machine learning, and data communication."
+							</p>
+						</div>
+
+						<!-- Blog Posts -->
+						<section class="posts">
+							<article>
+								<header>
+									<span class="date">January 12, 2026</span>
+									<h2><a href="blog1.html">From Code to Insight: A Systematic Framework for Developing Data Interpretation Skills<br />
+									</a></h2>
+								</header>
+								<a href="blog1.html" class="image fit"><img src="images/Interpretation Framework.png" alt="" /></a>
+								<p>A practical guide for data scientists who can build models but struggle to communicate findings. Learn the five-part framework to transform your analytical communication skills through deliberate practice.</p>
+								<ul class="actions special">
+									<li><a href="blog1.html" class="button">Read More</a></li>
+								</ul>
+							</article>
+						</section>
+
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<section class="split contact">
+							<section class="alt">
+								<h3>Location</h3>
+								<p><br />
+								London, UK | Larisa, Greece</p>.
+							</section>
+							<section>
+								<h3>Phone</h3>
+								<p><a href="#">(+44) 7405933482 | (+30) 6983203541</a></p>
+							</section>
+							<section>
+								<h3>Email</h3>
+								<p><a href="#">kovacikostanca@gmail.com</a></p>
+							</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="https://www.linkedin.com/in/kostanca-kovaci/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+									<li><a href="https://github.com/kovacikostanca" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+							</section>
+						</section>
+					</footer>
+
+				<!-- Copyright -->
+					<div id="copyright">
+						<ul><li>&copy; Kostanca Kovaci 2026</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					</div>
+
 			</div>
 
-		</div>
-
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/main.js"></script>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
