--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <!--
 	Massively by HTML5 UP
@@ -38,6 +39,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
 							<li><a href="tutorials.html">Tutorials</a></li>
+							<li><a href="blog.html">Blogs</a></li>
 							<li><a href="about_me.html">About Me</a></li>
 						</ul>
 						<ul class="icons">
