--- a/about_me.html
+++ b/about_me.html
@@ -22,6 +22,7 @@
             <ul class="links">
                 <li><a href="index.html">Projects</a></li>
                 <li><a href="tutorials.html">Tutorials</a></li>
+                <li><a href="blog.html">Blogs</a></li>
                 <li class="active"><a href="about_me.html">About Me</a></li>
             </ul>
             <ul class="icons">
