--- a/tutorials.html
+++ b/tutorials.html
@@ -40,6 +40,7 @@
       <ul class="links">
         <li><a href="index.html">Projects</a></li>
         <li class="active"><a href="tutorials.html">Tutorials</a></li>
+        <li><a href="blog.html">Blogs</a></li>
         <li><a href="about_me.html">About Me</a></li>
       </ul>
       <ul class="icons">
