--- a/index.html
+++ b/index.html
@@ -432,29 +432,30 @@
 
   <div class="contact-container">
     <!-- Form -->
-    <form class="contact-form" action="send_email.php" method="POST" enctype="multipart/form-data">
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" placeholder="Your name" required>
-      </div>
+    <form action="send_email.php" method="POST" enctype="multipart/form-data">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name" required>
+  </div>
 
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="you@example.com" required>
-      </div>
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input type="email" name="email" id="email" required>
+  </div>
 
-      <div class="form-group">
-        <label for="message">Message</label>
-        <textarea id="message" name="message" placeholder="Write your message here..." required></textarea>
-      </div>
+  <div class="form-group">
+    <label for="message">Message</label>
+    <textarea name="message" id="message" required></textarea>
+  </div>
 
-      <div class="form-group">
-        <label for="attachment">Attachment (PDF, DOC, TXT, CSV, XLSX)</label>
-        <input type="file" id="attachment" name="attachment" accept=".pdf,.doc,.docx,.txt,.csv,.xlsx">
-      </div>
+  <div class="form-group">
+    <label for="attachment">Attach a file (PDF, DOC, XLS, CSV, TXT)</label>
+    <input type="file" name="attachment" id="attachment" accept=".pdf,.doc,.docx,.xls,.xlsx,.csv,.txt">
+  </div>
 
-      <button type="submit" class="submit-btn">Send Message</button>
-    </form>    
+  <button type="submit" class="submit-btn">Send Message</button>
+</form>
+ 
   </div>
 </section>
 
