--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -197,7 +197,7 @@
       <div class="logo">PORTFOLIO</div>
       <div class="nav-links">
         <a href="../index.html">Home</a>
-        <a href="../index.html#contact">Contact</a>
+        <a href="../index.html#blogs">Blogs</a>
       </div>
     </div>
   </nav>
@@ -437,3 +437,4 @@
   </div>
 </body>
 </html>
+
