--- a/index.html
+++ b/index.html
@@ -427,37 +427,38 @@
 <section id="contact">
   <div class="section-header">
     <h2>Contact Me</h2>
-    <p>Have a question or a project in mind? Send me a message and attach any relevant files.</p>
+    <p>I'm always happy to connect, discuss data projects, or collaborate. Reach out via email or LinkedIn.</p>
   </div>
 
   <div class="contact-container">
-    <!-- Form -->
-    <form action="send_email.php" method="POST" enctype="multipart/form-data">
-  <div class="form-group">
-    <label for="name">Name</label>
-    <input type="text" name="name" id="name" required>
-  </div>
+    <div class="contact-info">
+      <div class="contact-item">
+        <div class="contact-icon">📧</div>
+        <div class="contact-details">
+          <h4>Email</h4>
+          <p><a href="mailto:kovacikostanca@gmail.com">kovacikostanca@gmail.com</a></p>
+        </div>
+      </div>
 
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input type="email" name="email" id="email" required>
-  </div>
+      <div class="contact-item">
+        <div class="contact-icon">💼</div>
+        <div class="contact-details">
+          <h4>LinkedIn</h4>
+          <p><a href="https://www.linkedin.com/in/kostanca-kovaci" target="_blank">linkedin.com/in/kostanca-kovaci</a></p>
+        </div>
+      </div>
 
-  <div class="form-group">
-    <label for="message">Message</label>
-    <textarea name="message" id="message" required></textarea>
-  </div>
-
-  <div class="form-group">
-    <label for="attachment">Attach a file (PDF, DOC, XLS, CSV, TXT)</label>
-    <input type="file" name="attachment" id="attachment" accept=".pdf,.doc,.docx,.xls,.xlsx,.csv,.txt">
-  </div>
-
-  <button type="submit" class="submit-btn">Send Message</button>
-</form>
- 
+      <div class="contact-item">
+        <div class="contact-icon">📎</div>
+        <div class="contact-details">
+          <h4>Send Files</h4>
+          <p>If you want to share a file (PDF, DOC, TXT, Excel, CSV), please email it directly to <a href="mailto:kovacikostanca@gmail.com">kovacikostanca@gmail.com</a>. Include a brief description of your project or question.</p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
+
 
 <!-- Contact Section CSS (add to style.css or inside <style> in head) -->
 <style>
