--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
       <div class="blog-footer">
   <span class="read-time">5 min read</span>
-  <a href="../blogs/blog1.html" class="blog-read-link">Read →</a>
+  <a href="blogs/blog1.html" class="blog-read-link">Read →</a>
 </div>
 
     </article>
@@ -393,7 +393,7 @@
 
       <div class="blog-footer">
         <span class="read-time">8 min read</span>
-        <a href="../blogs/blog2.html">Read →</a>
+        <a href="blogs/blog2.html">Read →</a>
       </div>
     </article>
 
@@ -415,14 +415,11 @@
   </div>
 
   <div class="load-more-container">
-    <a href="../blogs/all-blogs.html" class="btn-primary">View All Blogs</a>
+    <a href="blogs/all-blogs.html" class="btn-primary">View All Blogs</a>
   </div>
 </section>
 
 
-
-
-  <!-- Contact Section -->
   <!-- Contact Section -->
 <section id="contact">
   <div class="section-header">
