--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <div class="services-grid">
 
     <!-- Service 1 -->
-    <div class="service-card" id="service1">
+    <div class="service-card" href="services/service1.html">
       <div class="service-icon">🗂️</div>
 
       <div class="service-price">
@@ -137,7 +137,7 @@
   
 
     <!-- Service 2 -->
-    <div class="service-card">
+    <div class="service-card" href="services/service2.html">
       <div class="service-icon">🔍</div>
 
       <div class="service-price">
@@ -159,7 +159,7 @@
     </div>
 
     <!-- Service 3 -->
-    <div class="service-card">
+    <div class="service-card" href="services/service3.html">
       <div class="service-icon">📊</div>
 
       <div class="service-price">
