--- a/index.html
+++ b/index.html
@@ -18,18 +18,27 @@
 
   <!-- Navigation -->
   <nav id="navbar">
-    <div class="nav-container">
-      <div class="logo">PORTFOLIO</div>
-      <div class="nav-links">
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#tutorial">Tutorials</a>
-        <a href="#blogs">Blogs</a>
-        <a href="#contact">Contact</a>
-      </div>
-    </div>
-  </nav>
+  <div class="nav-container">
+    <div class="logo">PORTFOLIO</div>
+    
+    <!-- ADD THIS BUTTON -->
+    <button id="menu-toggle" aria-label="Toggle Menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+
+    <!-- Change this from <div> to <ul> -->
+    <ul class="nav-links">
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#tutorial">Tutorials</a></li>
+      <li><a href="#blogs">Blogs</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </div>
+</nav>
 
   <!-- Hero Section -->
   <section id="hero">
